docs/book/samples/appa/overlap_check.out
error[dispatch]: overlapping overloads of `same` are illegal
  --> overlap_check.kso:6:4
   6 | fn same y
          ^
