docs/book/samples/appa/overlap_check.kso
pub play = print "{same 1}"

fn same x
  x

fn same y
  y
